--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@
 
 galaxy_info:
   author: Jason McVetta
-  description: Install latest version of Python from Deadsnakes PPA
+  description: Install latest Python 2.7.x release from Deadsnakes PPA
   company: siliconheavy.com
   license: license (Apache)
   min_ansible_version: 2.0
@@ -22,10 +22,11 @@ galaxy_info:
   #  - utopic
   #  - vivid
   #  - wily
-    - xenial
+  #  - xenial
   
   galaxy_tags: 
     - python
+    - python27
     - deadsnakes
 
 dependencies: []
