--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,16 @@
+# vim:ft=ansible:
 ---
-# tasks file for python-latest
+
+- name: Ensure Deadsnakes APT repository is present
+  apt_repository:
+    repo: "ppa:fkrull/deadsnakes-python2.7"
+    state: present
+    update_cache: yes
+
+- name: Ensure latest Python release is installed
+  apt:
+    name: "{{ item }}"
+    state: latest
+  with_items:
+    - python
+    - python2.7
